[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prefabs/BaseEnemy.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.904301
height = 0.002

[sub_resource type="BoxShape" id=4]
extents = Vector3( 15.0835, 2.88114, 14.417 )

[node name="BaseEnemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.713729, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="reaction" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="reaction"]
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="reaction" to="." method="_on_reaction_body_entered"]
[connection signal="body_exited" from="reaction" to="." method="_on_reaction_body_exited"]
